tests/paczka1/fuzzy1/39434139.err
Error in line 2: oSD3BRfc A468 46,1
Error in line 17: hzHSlt A468 43,62
Error in line 14: 194u S997 39,9
Error in line 16: hzHSlt A509 29,7
Error in line 18: A509 S132 72,7
Error in line 27: Vf7Av=C S132 1=,5
Error in line 10: Vf7Av9C A468 66,5
